--- a/index.html
+++ b/index.html
@@ -1,222 +1,63 @@
-<!--[if gte mso 10]>
+
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <style>
- /* Style Definitions */
- table.MsoNormalTable
-	{mso-style-name:"Table Normal";
-	mso-tstyle-rowband-size:0;
-	mso-tstyle-colband-size:0;
-	mso-style-noshow:yes;
-	mso-style-priority:99;
-	mso-style-parent:"";
-	mso-padding-alt:0cm 5.4pt 0cm 5.4pt;
-	mso-para-margin:0cm;
-	mso-pagination:widow-orphan;
-	font-size:12.0pt;
-	font-family:"Calibri",sans-serif;
-	mso-ascii-font-family:Calibri;
-	mso-ascii-theme-font:minor-latin;
-	mso-hansi-font-family:Calibri;
-	mso-hansi-theme-font:minor-latin;
-	mso-bidi-font-family:"Times New Roman";
-	mso-bidi-theme-font:minor-bidi;}
 </style>
-<![endif]-->
 </head>
 
-<body lang=en-AR style='tab-interval:36.0pt;word-wrap:break-word'>
+<body lang=en-ES word-wrap:break-word'>
 
-  <div class=WordSection1>
 
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>H</span>elps
-      calculate score<span lang=EN-US style='mso-ansi-language:EN-US'>s</span> for
-      Ticket to Ride board game.</p>
+<h1>
+  Ticket to Ride: One of the absolute best board games ever!
+</h1>
 
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
+<p>Ticket to Ride is one of the best board games ever! It is an absolute favorite to play with family or friends! Even if you own one game board you never get tired of playing it over and over.</p>
 
-    <p class=MsoNormal>With this app you can very quickly and smoothly calculate
-      scores for the Ticket to Ride board game and all it's extensions.</p>
+<p>As owner of most of the variants with my family we play tournaments were we play each variant and give out points for each game so we end up with a tournament winner in an event that lasts various days!</p>
 
-    <p class=MsoNormal>You can add all points for:</p>
+<h1>Why time to count?</h1>
+  
+<p>The game rules are quite simple, but we do one thing a bit differently than how the game is presented in the rules. Even though the rules indicate that route points are to be counted as the routes are built, we do not score these points, and count all route points at the end.</p>
+<p>We believe moving the score trackers distracts from the esence of what is the most fun of the game. We play the game with a fast pace and everyone is very much submerged in their world of keeping track of destination tickets and making the critical decision every turn.</p>
+<ul>
+<li>Do I get more train car cards to build may routes quickly, or do I quickly build that route before someone else gets it?</li>
+<li>Does building this route give away the path I am building?</li>
+<li>Are any of the available car train card colors any good for my plans, or do I get more destination tickets to try to score more points?</li>
+</ul>
+<p>If you stop every time you build a route to move your score tracker you get a bit distracted from enjoying thinking about all these decisions you can take.</p>
+<p>It seems that many other players around the world also believe that counting points at the end is the best way to enjoy the game.</p>
+<h1>Enjoying every moment of play</h1>
+<p> Let's be realistic, it isn't always easy to have time to play a Ticket to Ride game. And you not only need time, you need other players to be with you and have the time to play.</p>
+<p>So deciding on playing a game is to start to enjoy this game. You have to make sure everyone can play and decide what game is played. You might even have to decide where in the house to play.</p>
+<p>Before you actually start playing you have to set the board, decide on how to sit around the talbe and who goes first! This is the first part of enjoying the time with family or friends to play Ticket to Ride.</p>
+<p>After all the preparations are done is the meat of it all. The actual gameplay, car train cards, routes and destination tickets! A fast and exciting moment of adrenaline from all the competition! This goes on until that last turn when someone takes that leap of faith and finishes his or hers car trains hoping to beat the rest.</p>
+<p>That's when Time to count comes in! Now everyone helps out in getting all the routes, destination tickets and bonus info in to see how the players rank with their final scores. This is the last moment of the game and to be enjoyed like all the rest of the moments!</p>
 
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal><b>Routes</b><b><span lang=EN-US style='mso-ansi-language:
-EN-US'>:</span></b><span lang=EN-US style='mso-ansi-language:EN-US'> Click on
-        the number indicating route in train cars length. Undo button for editing. Only
-        lengths for the extension are shown. Number of train cars left are indicated to
-        validate that all routes were accounted for.<o:p></o:p></span></p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal><b>Destination Tickets</b><b><span lang=EN-US style='mso-ansi-language:EN-US'>:</span></b><span
-        lang=EN-US style='mso-ansi-language:
-EN-US'> Click on the number indicating destination ticket points. With a simple
-        click you can do the complete tickets and incomplete tickets. Undo button for
-        editing. Only points for the actual destination tickets in the extension are
-        shown.<o:p></o:p></span></p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal>Bonuses according to each board game extension<span lang=EN-US style='mso-ansi-language:EN-US'>!!
-        All bonus points are awarded
-        according to the rules. Each extension requires some information to be input as
-        indicated below:<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal><b>Longest Route</b><b><span lang=EN-US style='mso-ansi-language:
-EN-US'>:</span></b><span lang=EN-US style='mso-ansi-language:EN-US'> Input
-        longest route in train cars for each player and the points are awarded to the
-        player(s) with the longest route with the bonus corresponding to the extension.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal><b>Globertrotter</b><b><span lang=EN-US style='mso-ansi-language:
-EN-US'>:</span></b><span lang=EN-US style='mso-ansi-language:EN-US'> No need to
-        input. Points are awarded to the player(s) with the most completed destination
-        tickets with the bonus corresponding to the extension.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal><b>Europe Stations</b><b><span lang=EN-US style='mso-ansi-language:
-EN-US'>:</span></b><span lang=EN-US style='mso-ansi-language:EN-US'> Input how
-        many stations were used for each player; points are awarded accordingly.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal><b>Rails and Sails Ports</b><b><span lang=EN-US style='mso-ansi-language:EN-US'>:</span></b><span
-        lang=EN-US style='mso-ansi-language:
-EN-US'> Indicate if each port was used and how many destination tickets for
-        that port were completed for each player; points are awarded accordingly.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal><b>Africa Double Routes</b><b><span lang=EN-US style='mso-ansi-language:EN-US'>:</span></b><span
-        lang=EN-US style='mso-ansi-language:
-EN-US'> Input how many routes were made with terrain cards for each player;
-        extra points are awarded accordingly. For this expansion it is necessary to
-        simply take note of routes made with terrain cards for each player during game
-        play.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal><b>India Mandalas</b><b><span lang=EN-US style='mso-ansi-language:
-EN-US'>: </span></b><span lang=EN-US style='mso-ansi-language:EN-US'>Input how
-        many mandalas for each player; points are awarded accordingly.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal><b>Asia Mountain</b><b><span lang=EN-US style='mso-ansi-language:
-EN-US'>:</span></b><span lang=EN-US style='mso-ansi-language:EN-US'> Input how
-        many train cars were used for mountains for each player; points are awarded
-        accordingly.<o:p></o:p></span></p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal><b>Nederland Toll Tokens and Loans</b><b><span lang=EN-US
-          style='mso-ansi-language:EN-US'>:</span></b><span lang=EN-US style='mso-ansi-language:
-EN-US'> Input how many loans were taken and toll tokens at the end of the game
-        for each player; points are awarded accordingly.<o:p></o:p></span></p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal><b>Pennsylvania Shares</b><b><span lang=EN-US style='mso-ansi-language:EN-US'>:</span></b><span
-        lang=EN-US style='mso-ansi-language:
-EN-US'> For each player input how many cards and best card for each share;
-        points are awarded accordingly. For two player games input the dummy player
-        information with the half of the cards that are used for scoring. <o:p></o:p></span></p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal><b>United Kingdom Cards</b><b><span lang=EN-US style='mso-ansi-language:EN-US'>:</span></b><span
-        lang=EN-US style='mso-ansi-language:
-EN-US'> For each player indicate the cards that were bought; points are awarded
-        accordingly. Only cards that award points are considered. For the Steam Turbine
-        card input number of ferries built at the time the card is bought and ferries
-        at the end. For the Double Heading card input number of routes built at the
-        time the card is bought. For this expansion it is necessary to simply take note
-        of this information during game play.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal><b>Márklin Passengers</b><b><span lang=EN-US style='mso-ansi-language:EN-US'>:</span></b><span
-        lang=EN-US style='mso-ansi-language:
-EN-US'> Input merchandise points for each player; points are awarded
-        accordingly.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><b><span lang=EN-US style='mso-ansi-language:EN-US'>
-          <o:p>&nbsp;</o:p>
-        </span></b></p>
-
-    <p class=MsoNormal><b>Germany Passengers</b><b><span lang=EN-US style='mso-ansi-language:EN-US'>:</span></b><span
-        lang=EN-US style='mso-ansi-language:
-EN-US'> Input number of meeple passengers at end game for each player; points
-        are awarded accordingly. Ties are considered for scoring as indicated in the
-        rules.<o:p></o:p></span></p>
-
-    <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'>
-        <o:p>&nbsp;</o:p>
-      </span></p>
-
-    <p class=MsoNormal><b>Old West Cities</b><b><span lang=EN-US style='mso-ansi-language:
-EN-US'>:</span></b><span lang=EN-US style='mso-ansi-language:EN-US'> This
-        extension requires input during game play. Each time a route is built and there
-        are cities take note of points for cities. Points are awarded for player(s)
-        that owns the city and subtracted for the player that built the <span class=GramE>route</span> so they are
-        subtracted from the regular way of
-        inputting route points.<o:p></o:p></span></p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal>
-      <o:p>&nbsp;</o:p>
-    </p>
-
-    <p class=MsoNormal>The app is intended to be used as the game finishes and all
-      points are counted for.</p>
-
-  </div>
-
+<h1>The simple app mechanics</h1>
+<p>The app already has all the differences for each game board variant. So all you have to do is input the basic info on how each player played and the scores are done automatically.</p>
+<p>You can input information in any order you want, but it seems natural to first do routes, then destination tickets and last bonuses.</p>
+<p>For routes, you input all the routes of each player. You just look at the board and with a simple tap you put every route built. The app shows you the points scored for routes. The app knows how many train cars are in game for each game board variant, so it conveniently shows how many unused train cars. This helps make a check at the end to see that it matches the number of actual unused train cars. Even for variants that count routes differently we use the same mechanic. Later we explain in detail each variant.</p>
+<p>Destination tickets are also done per player. You first check which destination tickets were completed and which where not. You are showed buttones with the ticket points. Since the app knows every game board variant you are shown only the points for the variant player. You can input here completed destination tickets and those that went uncompleted as well. You just tap on the buttons for complete and incomplete to swith between these.</p>
+<h1>Bonuses for all extensions made easy</h1>
+<p>Every variant has some bonus. Some of them are done with no need to input more information.</p>
+<p>The <b>globertotter bonus</b> is automatically awarded to the player (or players in case of a tie) that have the most completed destination tickets. The app knows how many points to award for each game board variant.</p>
+<p>The default method for the <b>long route bonus</b> is to input for each player the longest route in train cars. The app awards the game variant's bonus points for long route the the player(s) with the longest route. The other option is to simply put in the app who are the players with the longest route so the app awards the corresponding bonus. In the app options screen you can decide for what method to you use.</p>
+<p>The <b>Europe</b> variant has the stations that need to be counted for bonus. Just indicated how many stations were used and the app will award 4 points per each station as bonus.</p>
+<p>The <b>Märklin</b> variant include the merchandise tokens bonus. Just input the final number of merchandise tokens per each player.</p>
+<p>For the <b>Rails and Sails</b> game boards the ports give bonus points. Just input for each port how many destination tickets for that port and bonus points are awarded according to the bonus table for each game board.</p>
+<p>The <b>Germany</b> game board awards points for passengers. At the end of the game just input how many passengers for each color each player has. The app awards points according to the rules.</p>
+<p>For the <b>Asia</b> game board simply indicate how many train cars were used for mountain routes. The app considers car train for routes as well as those used for mountains to indicate how many were left unused at the end of the game. The app awards 2 points per train car used for mountains.</p>
+<p>In the <b>India</b> game board players are awarded a Grand Tour Bonus according to mandalas built. Just input the amount of destination tickets completed inside a mandala and the app awards the bonus according to the table in the rules.</p>
+<p>For the <b>Heart of Africa</b> the bonuses are awarded for building routes using terrain cards. In order to be able to count points at the end, for this variant we need to take note during the game; so you need a bit of paper and a pen or pencil. The recommended way of taking note is to draw a table with the player names in the first column, and then have columns for each route length: 1 to 6. Only take note at the time a route is built with terrain cards. You just a put a tick mark in the cell for the player and route length. So at the game end you just input for each player how many routes were completed using terrain cards for each route length. The app awards the extra points for these routes.</p>
+<p>The <b>Nederland</b> game board gives out bonuses according to loans and toll tokens. Just input for each player the amount of loans requested and/or toll tokens. The app automatically awards penalties when loans are requested, and if not request then awards bonus for toll tokens according to the table in the game rules.</p>
+<p>The <b>United Kingdom</b> variant is the most complex variant in terms of bonuses. For these bonuses to be calculated just indicate for each player which of the technology cards that award points were bought. There are two cards that would require that points be counted normally during game play. In order to count all points at the end then it is required to take note of some simple information.</p>
+<p>If the Steam Turbines card is bought by a player you need to take note of how many ferries where built at the time the card is bought. At the time to count moment you just enter that number and the total number of built ferries. The app awards the corresponding bouns for ferries built after the card was bought.</p>
+<p>Similarly, if the Double Heading card is bought the information for routes built at the time the card is bought needs to be noted. At the time to count moment the correspoding award is given for all routes built after the card was bought.</p>
+<p>If a player buys the Equalising Beam card then the information for longest route must be completed just as it would be for a variant with the longest route bonus.</p>
+<p>The <b>Pennsylvania</b> game board variant has bonuses awarded according to shares owned by players. Just enter for each player how many shares they have for each share type and also which is the first share of the type bought (the lowest numbered share). This is used for determing who gets more points in case of a tie in number of shares. The app awards the shares bonus according to the rules.</p>
+<p>The <b>Old West</b> variant is the most tricky variant in order to be able to count points at the time to count moment. Since points are awarded differently when a route has cities in one or both of it's ends then it is requied to take note how the points are ro be awarded differently than it would be if no cities were present.</p>
+<p>The recommended way of taking note is to draw a table with the player names in the first column, and then have another column for taking note of points. Only take note at the time a route is built with cities. If the route has another player's city then put the value in points with a plus sign for that player(s). If the player who built the route also has a city then you do not need to take not because the route needs to be counted for normally; but if the player does not own a city then you need to put the point value for that route with a negative sign for that player. This is done to substract the points that will be counted at the end. So at the game end you just input the sum of all the numbers you input for each player during game play.</p>
 </body>
 
 </html>
