--- a/index.html
+++ b/index.html
@@ -11,41 +11,43 @@
 <h1>
   Ticket to Ride: One of the absolute best board games ever!
 </h1>
-
+<img src="table.jpg" alt="Ticket to Ride on table" width="600">
 <p>Ticket to Ride is one of the best board games ever! It is an absolute favorite to play with family or friends! Even if you own one game board you never get tired of playing it over and over.</p>
 
-<p>As owner of most of the variants with my family we play tournaments were we play each variant and give out points for each game so we end up with a tournament winner in an event that lasts various days!</p>
+<p>With my family we organize tournaments were we play each variant. We give out points for each game so we end up with a tournament winner in an event that lasts several days!</p>
 
 <h1>Why time to count?</h1>
-  
-<p>The game rules are quite simple, but we do one thing a bit differently than how the game is presented in the rules. Even though the rules indicate that route points are to be counted as the routes are built, we do not score these points, and count all route points at the end.</p>
-<p>We believe moving the score trackers distracts from the esence of what is the most fun of the game. We play the game with a fast pace and everyone is very much submerged in their world of keeping track of destination tickets and making the critical decision every turn.</p>
+<img src="points.jpg" alt="Ticket to Ride points table" width="300">  
+<p>The game rules are quite simple, but we do one thing a bit differently than how the game is presented in the rules. Even though the rules indicate that route points are to be counted as the routes are built, we do not score these points until after the end of the game.</p>
+<p>We believe moving the score trackers distracts from the esence of what is the most fun of the game. We play the game in a fast pace and everyone is very much submerged in their world of keeping track of destination tickets and making the critical decision every turn.</p>
 <ul>
 <li>Do I get more train car cards to build may routes quickly, or do I quickly build that route before someone else gets it?</li>
 <li>Does building this route give away the path I am building?</li>
 <li>Are any of the available car train card colors any good for my plans, or do I get more destination tickets to try to score more points?</li>
 </ul>
-<p>If you stop every time you build a route to move your score tracker you get a bit distracted from enjoying thinking about all these decisions you can take.</p>
-<p>It seems that many other players around the world also believe that counting points at the end is the best way to enjoy the game.</p>
+<p>If you stop every time you build a route to move your score tracker you get a bit distracted from thinking about all these decisions you can take.</p>
+<p>It seems that many other players around the world also believe that counting points at the end is the best way to enjoy the game. <a href="https://play.google.com/store/apps/details?id=com.timetocount">Install the Time to count app directly from Google Play Store!</a></p>
+
 <h1>Enjoying every moment of play</h1>
-<p> Let's be realistic, it isn't always easy to have time to play a Ticket to Ride game. And you not only need time, you need other players to be with you and have the time to play.</p>
-<p>So deciding on playing a game is to start to enjoy this game. You have to make sure everyone can play and decide what game is played. You might even have to decide where in the house to play.</p>
-<p>Before you actually start playing you have to set the board, decide on how to sit around the talbe and who goes first! This is the first part of enjoying the time with family or friends to play Ticket to Ride.</p>
-<p>After all the preparations are done is the meat of it all. The actual gameplay, car train cards, routes and destination tickets! A fast and exciting moment of adrenaline from all the competition! This goes on until that last turn when someone takes that leap of faith and finishes his or hers car trains hoping to beat the rest.</p>
-<p>That's when Time to count comes in! Now everyone helps out in getting all the routes, destination tickets and bonus info in to see how the players rank with their final scores. This is the last moment of the game and to be enjoyed like all the rest of the moments!</p>
+<p> Let's be realistic, it isn't always easy to find the time to play a Ticket to Ride game. And you not only need time, you need other players to be with you and have the time to play.</p>
+<p>Deciding on playing a game is to start to enjoy this game. You have to make sure everyone can play and decide what game variant is played. You might even have to decide where in the house to play.</p>
+<p>Before you actually start playing you have to set the board, decide on how to sit around the table and who goes first! This is the first part of enjoying the time with family or friends to play Ticket to Ride.</p>
+<p>After all the preparations are done is the meat of it all. It is the time for gameplay: car train cards, routes and destination tickets! A fast and exciting moment of adrenaline from all the competition! This goes on until that last turn when someone takes that leap of faith and finishes his or hers car trains hoping to beat the rest.</p>
+<p>That's when Time to Count comes in! Now everyone helps out in getting all the routes, destination tickets and bonus info in to see how the players rank with their final scores. This is the last moment of the game and to be enjoyed like all the rest of the moments!</p>
 
 <h1>The simple app mechanics</h1>
-<p>The app already has all the differences for each game board variant. So all you have to do is input the basic info on how each player played and the scores are done automatically.</p>
-<p>You can input information in any order you want, but it seems natural to first do routes, then destination tickets and last bonuses.</p>
-<p>For routes, you input all the routes of each player. You just look at the board and with a simple tap you put every route built. The app shows you the points scored for routes. The app knows how many train cars are in game for each game board variant, so it conveniently shows how many unused train cars. This helps make a check at the end to see that it matches the number of actual unused train cars. Even for variants that count routes differently we use the same mechanic. Later we explain in detail each variant.</p>
-<p>Destination tickets are also done per player. You first check which destination tickets were completed and which where not. You are showed buttones with the ticket points. Since the app knows every game board variant you are shown only the points for the variant player. You can input here completed destination tickets and those that went uncompleted as well. You just tap on the buttons for complete and incomplete to swith between these.</p>
+<p>The app knows all the differences for each game board variant. So all you have to do is input the information on how each player played and the scores are done automatically.</p>
+<p>You can input information in any order you want, but it seems natural to do routes first, then destination tickets and last bonuses.</p>
+<p>For routes, you input all the routes of each player. You just look at the board and with a simple tap you enter every route built. The app shows you the points scored for routes. The app knows how many train cars are in game for each game board variant, so it conveniently shows how many unused train cars. This helps make a check at the end to see that it matches the number of actual unused train cars. Even for variants that count routes differently we use the same mechanic. Later we explain in detail each variant.</p>
+<p>Destination tickets are also done per player. You first check which destination tickets were completed and which where not. You then go to the app that shows buttons with the ticket points. Since the app knows every game board variant you are shown only the points for that variant. You can input here completed destination tickets and those that went uncompleted as well. You just tap on the buttons for complete and incomplete to switch between these.</p>
 <h1>Bonuses for all extensions made easy</h1>
-<p>Every variant has some bonus. Some of them are done with no need to input more information.</p>
-<p>The <b>globertotter bonus</b> is automatically awarded to the player (or players in case of a tie) that have the most completed destination tickets. The app knows how many points to award for each game board variant.</p>
-<p>The default method for the <b>long route bonus</b> is to input for each player the longest route in train cars. The app awards the game variant's bonus points for long route the the player(s) with the longest route. The other option is to simply put in the app who are the players with the longest route so the app awards the corresponding bonus. In the app options screen you can decide for what method to you use.</p>
-<p>The <b>Europe</b> variant has the stations that need to be counted for bonus. Just indicated how many stations were used and the app will award 4 points per each station as bonus.</p>
+<p>Every variant has some bonus points awarded. Some of them are done with no need to input more information.</p>
+<p>The <b>globetrotter bonus</b> is automatically awarded to the player (or players in case of a tie) that have the most completed destination tickets. The app knows how many points to award for each game board variant.</p>
+<p>The default method for the <b>long route bonus</b> is to input for each player the longest route in train cars. The app awards the game variant's bonus points for long route the the player(s) with the longest route. The other option is to simply put in the app who are the players with the longest route so the app awards the corresponding bonus. In the app options screen you can decide for what method to use.</p>
+<p>The <b>Europe</b> variant has the stations that need to be counted for bonus points. Just indicated how many stations were used and the app will award 4 points per each station as bonus.</p>
 <p>The <b>Märklin</b> variant include the merchandise tokens bonus. Just input the final number of merchandise tokens per each player.</p>
-<p>For the <b>Rails and Sails</b> game boards the ports give bonus points. Just input for each port how many destination tickets for that port and bonus points are awarded according to the bonus table for each game board.</p>
+<img src="railssails.jpeg" alt="Rails and Sails bonus points table" width="300">  
+<p>For the <b>Rails and Sails</b> game boards the ports give bonus points. Just input for each port how many destination tickets were completed and bonus points are awarded according to the bonus table for each game board.</p>
 <p>The <b>Germany</b> game board awards points for passengers. At the end of the game just input how many passengers for each color each player has. The app awards points according to the rules.</p>
 <p>For the <b>Asia</b> game board simply indicate how many train cars were used for mountain routes. The app considers car train for routes as well as those used for mountains to indicate how many were left unused at the end of the game. The app awards 2 points per train car used for mountains.</p>
 <p>In the <b>India</b> game board players are awarded a Grand Tour Bonus according to mandalas built. Just input the amount of destination tickets completed inside a mandala and the app awards the bonus according to the table in the rules.</p>
@@ -58,6 +60,8 @@
 <p>The <b>Pennsylvania</b> game board variant has bonuses awarded according to shares owned by players. Just enter for each player how many shares they have for each share type and also which is the first share of the type bought (the lowest numbered share). This is used for determing who gets more points in case of a tie in number of shares. The app awards the shares bonus according to the rules.</p>
 <p>The <b>Old West</b> variant is the most tricky variant in order to be able to count points at the time to count moment. Since points are awarded differently when a route has cities in one or both of it's ends then it is requied to take note how the points are ro be awarded differently than it would be if no cities were present.</p>
 <p>The recommended way of taking note is to draw a table with the player names in the first column, and then have another column for taking note of points. Only take note at the time a route is built with cities. If the route has another player's city then put the value in points with a plus sign for that player(s). If the player who built the route also has a city then you do not need to take not because the route needs to be counted for normally; but if the player does not own a city then you need to put the point value for that route with a negative sign for that player. This is done to substract the points that will be counted at the end. So at the game end you just input the sum of all the numbers you input for each player during game play.</p>
+<p>“Ticket to Ride” is a registered trademark of Days of Wonder, and this site is not associated with Days of Wonder.</p>
+<p>Icons by <a href = "https://incons8.com">Icons8</a></p>
 </body>
 
 </html>
