Added table image for Africa

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   <p>The <b>India</b> game board offers players the change to win the Grand Tour Bonus according to mandalas built. For
     each player input the amount of destination tickets completed inside a mandala and the app awards the bonus
     according to the table in the rules.</p>
+  <img src="africa.jpeg" alt="Rails and Sails bonus points table" width="300">
   <p>For the <b>Heart of Africa</b> the bonuses are awarded for building routes using terrain cards. In order to be able
     to count points at the end, for this variant we need to take note during the game. So you need a bit of paper and a
     pen or pencil. The recommended way of taking note is to draw a table with the player names in the first column, and
