--- a/index.html
+++ b/index.html
@@ -175,29 +175,6 @@
       border-bottom: 1px solid #CED0D5;
       overflow: hidden;
     }
-
-    .image-col {
-      width: 60%;
-      text-align: center;
-      float: right;
-    }
-
-    @media only screen and (min-device-width: 568px) {
-      .image-col {
-        width: 100%;
-        text-align: center;
-        float: none;
-      }
-
-      .text-col {
-        width: 100%;
-      }
-    }
-
-    .text-col {
-      width: 40%;
-      margin-right: 5%;
-    }
   </style>
 </head>
 <div class="wrapper">
@@ -277,36 +254,34 @@
     </section>
     <section>
       <h1 id="Simple">Simple app mechanics</h1>
-      <div class="image-col">
+      <div class="center">
         <img alt="Time to Count Screen" src="Screenshot.png">
       </div>
-      <div class="text-col">
-        <p>The app knows all the differences for each game board variant. So all you have to do is input the information
-          on
-          how each player played and the scores are done automatically.</p>
-        <p>You can input information in any order you want, but it seems natural to do routes first, then destination
-          tickets
-          and last bonuses.</p>
-        <p>For routes, you input all the routes of each player. You look at the board and with a simple tap you enter
-          every
-          route built. The app shows you the points scored for routes. The app knows how many train cars are in game for
-          each
-          game board variant, so it conveniently shows how many unused train cars. This helps make a check at the end to
-          see
-          that it matches the number of actual unused train cars. Even for variants that count routes differently we use
-          the
-          same mechanic. Later we explain in detail each variant.</p>
-        <p>Destination tickets are also done per player. Looking at the board you first check which destination tickets
-          were
-          completed and which where not. You then go to the app that shows buttons with the ticket points. Since the app
-          knows
-          every game board variant you are shown only the points for that variant. You input completed destination
-          tickets
-          and
-          those that went uncompleted as well. You tap on the buttons for complete and incomplete to switch between
-          these.
-        </p>
-      </div>
+      <p>The app knows all the differences for each game board variant. So all you have to do is input the information
+        on
+        how each player played and the scores are done automatically.</p>
+      <p>You can input information in any order you want, but it seems natural to do routes first, then destination
+        tickets
+        and last bonuses.</p>
+      <p>For routes, you input all the routes of each player. You look at the board and with a simple tap you enter
+        every
+        route built. The app shows you the points scored for routes. The app knows how many train cars are in game for
+        each
+        game board variant, so it conveniently shows how many unused train cars. This helps make a check at the end to
+        see
+        that it matches the number of actual unused train cars. Even for variants that count routes differently we use
+        the
+        same mechanic. Later we explain in detail each variant.</p>
+      <p>Destination tickets are also done per player. Looking at the board you first check which destination tickets
+        were
+        completed and which where not. You then go to the app that shows buttons with the ticket points. Since the app
+        knows
+        every game board variant you are shown only the points for that variant. You input completed destination
+        tickets
+        and
+        those that went uncompleted as well. You tap on the buttons for complete and incomplete to switch between
+        these.
+      </p>
     </section>
     <section>
       <h1 id="Bonuses">Bonuses for all extensions made easy</h1>
