--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="ic_launcher.png">
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
-  <title>Ticket to Ride - Time To Count - Score Assistanty</title>
+  <title>Ticket to Ride - Time To Count - Score Assistant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Time to count will help you to count final score in Ticket to Ride for all players and all game board variants.">
   <meta name="author" content="Daniele Folatelli">
   <meta name="keywords"
-    content="app, Android App, Ticket to Ride, Board, Board Game, TTR, Game Setup, Board Setup, Utility, Score Assistant">
+    content="app, Android App, Ticket to Ride, Board, Board Game, TTR, Game Setup, Board Setup, Utility, Score Assistant, Train Game">
   <style>
     html,
     body,
@@ -182,7 +182,7 @@
   <body lang=en-ES word-wrap:break-word'>
     <nav class="nav">
       <ul>
-        <li><a href="#Why">Why time to count?</a></li>
+        <li><a href="#Why">Why "Time to count"?</a></li>
         <li><a href="#Enjoy">Enjoying every moment</a></li>
         <li><a href="#Simple">Simple app</a></li>
         <li><a href="#Bonuses">Bonuses for all extensions</a></li>
@@ -201,7 +201,7 @@
           href="https://daroolz.com/howtoplay/tickettoride/">video</a> to learn the game.</p>
     </section>
     <section>
-      <h1 id="Why">Why time to count?</h1>
+      <h1 id="Why">Why "Time to count"?</h1>
       <img src="points.jpg" alt="Ticket to Ride points table" width="600" class="center">
       <p>The rules indicate that route points are to be counted during gameplay, as the routes are built. I have found
         that
@@ -224,7 +224,7 @@
         all these decisions you can take.</p>
       <p>It seems that many other players around the world also believe that counting points at the end is the best way
         to
-        enjoy the game. With the Time to Count app this is done smoothly and the app helps avoid errors. Install the
+        enjoy the game. With the "Time to count" app this is done smoothly and the app helps avoid errors. Install the
         Time
         to
         count app directly from the Google Play Store!</p>
@@ -246,7 +246,7 @@
         the competition! This goes on until that last turn when someone takes that leap of faith and finishes his or
         hers
         car trains hoping to beat the rest.</p>
-      <p>That's when Time to Count comes in! Now everyone helps out in getting all the routes, destination tickets and
+      <p>That's when "Time to count" comes in! Now everyone helps out in getting all the routes, destination tickets and
         bonus
         info in to see how the players rank with their final scores. This is the last moment of the game and to be
         enjoyed
@@ -255,7 +255,7 @@
     <section>
       <h1 id="Simple">Simple app mechanics</h1>
       <div class="center">
-        <img alt="Time to Count Screen" src="Screenshot.png">
+        <img alt="Time to count Screen" src="Screenshot.png">
       </div>
       <p>The app knows all the differences for each game board variant. So all you have to do is input the information
         on
