--- a/index.html
+++ b/index.html
@@ -259,11 +259,13 @@
       </div>
       <p>The app knows all the differences for each game board variant. So all you have to do is input the information
         on
-        how each player played and the scores are done automatically.</p>
+        how each player played and the scores are done automatically. So, once the game is done then you turn on the
+        "Time to count" app. </p>
       <p>You can input information in any order you want, but it seems natural to do routes first, then destination
         tickets
         and last bonuses.</p>
-      <p>For routes, you input all the routes of each player. You look at the board and with a simple tap you enter
+      <p>For routes, you input all the routes of each player at a time. You look at the board and with a simple tap you
+        enter
         every
         route built. The app shows you the points scored for routes. The app knows how many train cars are in game for
         each
