--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     }
 
     section {
-      padding: 20px 0;
+      padding: 10px 0;
       clear: both;
       border-bottom: 1px solid #CED0D5;
       overflow: hidden;
@@ -230,6 +230,9 @@
         count app directly from the Google Play Store!</p>
       <center class="center"><a href="https://play.google.com/store/apps/details?id=com.timetocount"><img
             src="google-play-store.png" alt="Download on the Google Play Store"></a></center>
+      <p>The "Time to count" app makes it much easier to add up points for the Ticket to Ride game. You can add the
+        names of the players that play the games. The app also keeps history of all played games and shows best scores
+        in each game board variant.</p>
     </section>
     <section>
       <h1 id="Enjoy">Enjoying every moment of play</h1>
@@ -287,7 +290,11 @@
     </section>
     <section>
       <h1 id="Bonuses">Bonuses for all extensions made easy</h1>
-      <p>Every variant has some bonus points awarded. Some of them are done with no need to input more information.</p>
+      <p>Every variant has some bonus points awarded. A few are awarded with no need to input more information, but most
+        require input. You can see the bonus points awarded on the Bonus Screen. Some bonuses are awarded to players who
+        have the most of something. For example the globetrotter bonus for the most complete destination tickets. For
+        these bonuses the app has the All Players button that allows you to see how all players rank to obtain the
+        bonus.</p>
       <p>The <b>globetrotter bonus</b> is automatically awarded to the player (or players in case of a tie) that have
         the
         most completed destination tickets. The app knows how many points to award for each game board variant.</p>
@@ -307,7 +314,9 @@
       <img src="railssails.jpeg" alt="Rails and Sails bonus points table" width="600" class="center">
       <p>For the <b>Rails and Sails</b> game boards the ports give bonus points. Input for each port how many
         destination
-        tickets were completed and bonus points are awarded according to the bonus table for each game board.</p>
+        tickets were completed and bonus points are awarded according to the bonus table for each game board. If any
+        player exchanged pieces during the game, he enters the number of pieces as this affects his score; he loses one
+        point per exchanged piece.</p>
       <img src="germany.jpeg" alt="Germany passenger pieces" width="600" class="center">
       <p>The <b>Germany</b> game board awards points for passengers. At the end of the game input how many passengers
         for
